# twotrim

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  config.yaml  field_check.txt  pyproject.toml  rename_twotrim.py  results.txt  run_bench.py  tasks.json  verify_fix.py
benchmarks/: __init__.py  evaluators.py  runner.py
benchmarks/data/: gsm8k_tiny.json  longbench_tiny.json
benchmarks/datasets/: gsm8k.py  local.py  longbench.py  manual_loader.py
examples/: basic_proxy.py  custom_policy.py  sdk_usage.py
scripts/: download_benchmarks.py  fetch_gsm8k.py  fetch_longbench.py  generate_perf_graph.py  verify_boost.py  verify_sdk_query.py
src/twotrim/: __init__.py  config.py  types.py
src/twotrim/cache/: __init__.py  memory.py  prompt_cache.py  semantic_cache.py  store.py
src/twotrim/cli/: __init__.py  main.py
src/twotrim/compression/: __init__.py  canonicalize.py  embedding.py  pipeline.py  rag_aware.py  rule_based.py  semantic.py  structured.py
src/twotrim/evaluation/: __init__.py  evaluator.py  guardrails.py  similarity.py
src/twotrim/integrations/: __init__.py  huggingface.py  openai_compat.py  vllm_adapter.py
src/twotrim/interceptor/: __init__.py  middleware.py  proxy.py  router.py  streaming.py
src/twotrim/kv_cache/: __init__.py  detector.py  eviction.py  quantizer.py
src/twotrim/observability/: __init__.py  logger.py  metrics.py
src/twotrim/plugins/: base.py  registry.py
src/twotrim/policy/: __init__.py  engine.py  profiles.py  rules.py
src/twotrim/response/: __init__.py  compressor.py
src/twotrim/scoring/: __init__.py  embedding_contrib.py  frequency.py  heuristics.py  scorer.py
src/twotrim/sdk/: __init__.py  client.py
tests/: conftest.py  test_benchmarks.py
tests/test_cache/: test_semantic_cache.py
tests/test_compression/: test_pipeline.py  test_rule_based.py  test_structured.py
tests/test_evaluation/: test_evaluator.py
tests/test_interceptor/: test_proxy.py
tests/test_policy/: test_engine.py
tests/test_scoring/: test_scorer.py
